[project]
name = "uwblib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurence Liang", email = "lliang@groq.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
uwblib = "uwblib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
