[project]
name = "uwblib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurence Liang", email = "lliang@groq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "ruff>=0.12.5",
    "scipy>=1.15.3",
]

[project.scripts]
uwblib = "uwblib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
